# image_base_colors

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: histogram.rs  histogram_k_means.rs  img_utils.rs  kmeans.rs  main.rs  point.rs  rgba_color.rs  web.rs
src/img_utils/: base_colors.rs  color_point.rs  histogram.rs  rgb_color.rs  rgba_color.rs
src/kmeans/: histogram_k_means.rs
src/web/: controller.rs  request_parser.rs
