[package]
name = "image_base_colors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
rand = "0.8.5"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
